fix: overflow-x for Firefox

--- a/webdev/style.css
+++ b/webdev/style.css
@@ -183,6 +183,8 @@ button:hover {
 
 .community .images img {
     margin-right: 30px;
+    min-width: 407px;
+    height: auto;
 }
 
 .community .position {
